# invoice_pipeline

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .template-profile  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.lambda.txt  requirements.txt  run_pipeline.py
.claude/: settings.json
docs/: aws_migration_status.md  chat_agent_scope_design.md  deployment_guide.md  destruction_guide.md  implementation_plan.md  project_spec_driven_development.md  terra_principles.md  terraform_cheatsheet.md  terraform_commands.md  treemap.md
docs/adr/: ADR-001-phase0-decisions.md
docs/cloud run/: aws_pipeline_execution_results.md  deployment_sequence.md  lambda_bundle_generation.md  lambda_code_update_fix.md  post_bundle_deployment_steps.md  smoke_test_40_diagnostico.md
docs/local run/: aws_target_architecture.md  mvp_local_ollama_hallazgos.md
docs/prompts/: task.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: ai_refresh.py  generate_treemap.py  package.py  run_bronze.py  run_gold.py  run_pip_init.py  run_silver.py  run_uv_sync.py  stress_pipeline.py  sync_requirements.py
specs/: DESIGN.md  SPEC-004-runtime-iam-validation.md  SPEC-005-structured-logging.md  SPEC-006-ocr-llm-separation.md  SPEC-007-terraform-remote-state.md  SPEC-008-analythic-layer.md
src/: __init__.py
tests/: api_upload_status_smoke.ps1  aws_e2e_smoke.ps1  chat_api_smoke.ps1  check_terraform_cli_env.ps1  check_tfstate_bucket.ps1  pre_ui_smoke_suite.ps1  test_analytics.py  test_aws_pipeline.py  test_document_pipeline.py  test_example_job.py  test_olama.py
(+175 files in other folders)
