[project]
name = "aws-terraform-template"
version = "0.1.0"
description = "AWS and Terraform data engineering template"
requires-python = ">=3.11"
dependencies = [
    "jsonschema",
    "numpy",
    "pandas",
    "pyarrow",
    "python-dateutil",
    "pyyaml",
    "sqlalchemy",
    "numpy"
]

[project.optional-dependencies]
local = [
    "great-expectations; python_version < '3.14'",
    "duckdb",
    "fastexcel",
    "openpyxl",
    "pathspec",
    "polars",
    "psycopg2-binary",
    "setuptools",
    "wheel",
    "xlsxwriter",
]

cloud = [
    "awswrangler",
    "boto3",
]

[dependency-groups]
dev-local = [
    "faker",
    "hypothesis",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "pillow",
    "pytesseract",
]

dev-cloud = [
    "checkov",
    "moto",
    "tftest",
]

[tool.uv]
package = false
